--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
-  <section class="form-section">
+  <section class="page-error">
     <h1>404</h1>
     <p>Página não encontrada.</p>
-    <a href="/" class="btn">Voltar ao início</a>
+    <a href="/" class="btn btn-large">Voltar ao início</a>
   </section>
 <%- include('partials/footer') %>
