--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= typeof title !== 'undefined' ? title : 'MaisFreelas' %></title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -13,10 +16,12 @@
       <a href="/projetos">Projetos</a>
       <% if (user) { %>
         <a href="/dashboard">Dashboard</a>
-        <span><%= user.name %></span>
-        <form action="/logout" method="post" style="display:inline">
-          <button type="submit">Sair</button>
-        </form>
+        <div class="user-menu">
+          <span class="user-name"><%= user.name %></span>
+          <form action="/logout" method="post" style="display:inline">
+            <button type="submit" class="btn-logout">Sair</button>
+          </form>
+        </div>
       <% } else { %>
         <a href="/login">Entrar</a>
         <a href="/cadastro" class="btn">Cadastrar</a>
